# python-web-hw12

./: README.md  config.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2a8faa94e97b_init.py
src/: schemas.py
src/database/: connect_db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py
src/utils/: seed.py
